cluster/apps/monitoring/changedetection/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: changedetection
  namespace: monitoring
spec:
  selector:
    app: changedetection
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 5000
