cluster/apps/monitoring/changedetection/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: changedetection
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    hajimari.io/enable: "false"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - "changedetection.${SECRET_DOMAIN}"
      secretName: "changedetection-tls"
  rules:
    - host: "changedetection.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: changedetection
                port:
                  number: 5000
